Fixes the background-image displaying on smaller devices and cleanup of a controller

--- a/modules/core/client/scss/home.scss
+++ b/modules/core/client/scss/home.scss
@@ -23,6 +23,11 @@
     width: 70%;
   }
 }
+@media (min-height: 625px) and (max-width: 1000px){
+  .home-content {
+    margin-top: 33%;
+  }
+}
 @media (max-width: 600px) {
   .home-content {
     width: 100%;
